[metadata]
name = hector-the-collector
summary = Bugzilla statistics
description-file =
    README.md
author = Lars Kellogg-Stedman
author-email = lars@oddbit.com

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    hector

[entry_points]
console_scripts =
    hector = hector.main:main

[wheel]
universal = 1

[pbr]
# Treat sphinx warnings as errors during the docs build; this helps us keep
# the documentation clean.
warnerrors = true

[flake8]
ignore = E731
